--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "express": "^5.2.1",
     "nodemon": "^3.1.14",
     "socket.io": "^4.8.3"
+  },
+  "devDependencies": {
+    "@types/node": "^25.3.0"
   }
 }
